ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-bookstore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bookstore.local
    http:
      paths:
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 8000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8001
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8002
